force-app/main/default/objects/Logger_Configuration__mdt/Logger_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Controls options available to configure the Apex logger class.</description>
    <label>Logger Configuration</label>
    <pluralLabel>Logger Configurations</pluralLabel>
</CustomObject>