force-app/main/default/objects/Logger_Configuration__mdt/fields/Default_Message_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Default_Message_Prefix__c</fullName>
    <description>When populated, every message will be prefixed with this value. Can be overriden by setting the prefix explicitly in code.</description>
    <inlineHelpText>When populated, every message will be prefixed with this value. Can be overriden by setting the prefix explicitly in code.</inlineHelpText>
    <label>Default Message Prefix</label>
    <length>25</length>
    <type>Text</type>
</CustomField>