force-app/main/default/objects/Logger_Configuration__mdt/fields/Enable_System_Debug__c.field-meta.xml
<CustomField>
    <fullName>Enable_System_Debug__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, logs will also be published using the System.debug method.</description>
    <inlineHelpText>When checked, logs will also be published using the System.debug method.</inlineHelpText>
    <label>Enable System Debug</label>
    <type>Checkbox</type>
</CustomField>