force-app/main/default/objects/Logger_Configuration__mdt/fields/Flush_Limit__c.field-meta.xml
<CustomField>
    <fullName>Flush_Limit__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Indicates the max amount of logs to be held within the Apex Logger before being published and flushed (I.e. cleared). A blank value or a value less than 1 results in immediate publishing of each log.</description>
    <inlineHelpText>Indicates the max amount of logs to be held within the Apex Logger before being published and flushed (I.e. cleared). A blank value or a value less than 1 results in immediate publishing of each log.</inlineHelpText>
    <label>Flush Limit</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>