force-app/main/default/objects/Logger_Configuration__mdt/fields/Minimum_Severity__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Severity__c</fullName>
    <description>Logs will only be generated with a severity that is equal to or greater than the minimum selected level. Order from highest to lowest: ERROR, WARN, INFO, DEBUG.</description>
    <inlineHelpText>Logs will only be generated with a severity that is equal to or greater than the minimum selected level. Order from highest to lowest: ERROR, WARN, INFO, DEBUG.</inlineHelpText>
    <label>Minimum Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ERROR</fullName>
                <default>true</default>
                <label>ERROR</label>
            </value>
            <value>
                <fullName>WARN</fullName>
            </value>
            <value>
                <fullName>INFO</fullName>
            </value>
            <value>
                <fullName>DEBUG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>