force-app/main/default/objects/Logger_Configuration__mdt/fields/Pause_Logging__c.field-meta.xml
<CustomField>
    <fullName>Pause_Logging__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, all Apex logger instances that reference this configuration will stop publishing log events.</description>
    <inlineHelpText>When checked, all Apex logger instances that reference this configuration will stop publishing log events.</inlineHelpText>
    <label>Pause Logging</label>
    <type>Checkbox</type>
</CustomField>